--- a/include/Makefile.in
+++ b/include/Makefile.in
@@ -302,8 +302,8 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-include_HEADERS = lcms2.h lcms2_plugin.h
-EXTRA_DIST = lcms2.h lcms2_plugin.h
+include_HEADERS = lcms2art.h lcms2art_plugin.h
+EXTRA_DIST = lcms2art.h lcms2art_plugin.h
 all: all-am
 
 .SUFFIXES:
