--- a/configure.ac
+++ b/configure.ac
@@ -7,7 +7,7 @@ AC_PREREQ(2.60)
 #
 # Set the package name and version
 #
-AC_INIT(lcms2art,2.9)
+AC_INIT(lcms2mt,2.9)
 
 # Specify directory where m4 macros may be found.
 AC_CONFIG_MACRO_DIR([m4])
@@ -349,10 +349,10 @@ AM_CONDITIONAL(HasTIFF, test "$have_tiff" = 'yes')
 AC_SUBST(LIB_TIFF)
 
 
-# Libraries that the LCMSART library depends on
-LCMSART_LIB_DEPLIBS="$LIB_MATH $LIB_THREAD"
-LCMSART_LIB_DEPLIBS=`echo $LCMSART_LIB_DEPLIBS | sed -e 's/  */ /g'`
-AC_SUBST(LCMSART_LIB_DEPLIBS)
+# Libraries that the LCMS2MT library depends on
+LCMS2MT_LIB_DEPLIBS="$LIB_MATH $LIB_THREAD"
+LCMS2MT_LIB_DEPLIBS=`echo $LCMS2MT_LIB_DEPLIBS | sed -e 's/  */ /g'`
+AC_SUBST(LCMS2MT_LIB_DEPLIBS)
 
 # Libraries that the jpegicc program depends on
 JPEGICC_DEPLIBS="$LIB_JPEG $LIB_MATH $LIB_THREAD"
@@ -370,7 +370,7 @@ LIBS=''
 # Perform substitutions
 #
 AC_CONFIG_FILES([Makefile])
-AC_CONFIG_FILES([lcms2art.pc])
+AC_CONFIG_FILES([lcms2mt.pc])
 AC_CONFIG_FILES([include/Makefile])
 AC_CONFIG_FILES([src/Makefile])
 AC_CONFIG_FILES([utils/tificc/Makefile])
