--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -2,6 +2,6 @@
 # Makefile for include directory
 # Based on a work by Bob Friesenhahn
 
-include_HEADERS = lcms2art.h lcms2art_plugin.h
+include_HEADERS = lcms2mt.h lcms2mt_plugin.h
 
-EXTRA_DIST = lcms2art.h lcms2art_plugin.h
+EXTRA_DIST = lcms2mt.h lcms2mt_plugin.h
