--- a/Projects/VC2010/lcms2mt_DLL/lcms2mt_DLL.vcxproj.filters
+++ b/Projects/VC2010/lcms2mt_DLL/lcms2mt_DLL.vcxproj.filters
@@ -15,6 +15,9 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\src\cmsalpha.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\..\src\cmscam02.c">
       <Filter>Source Files</Filter>
     </ClCompile>
