--- a/Projects/VC2010/lcms2mt_DLL/lcms2mt_DLL.vcxproj
+++ b/Projects/VC2010/lcms2mt_DLL/lcms2mt_DLL.vcxproj
@@ -192,6 +192,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\src\cmsalpha.c" />
     <ClCompile Include="..\..\..\src\cmscam02.c" />
     <ClCompile Include="..\..\..\src\cmscgats.c" />
     <ClCompile Include="..\..\..\src\cmscnvrt.c" />
