--- a/Projects/VC2010/lcms2mt_static/lcms2mt_static.vcxproj
+++ b/Projects/VC2010/lcms2mt_static/lcms2mt_static.vcxproj
@@ -156,6 +156,7 @@
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\src\cmsalpha.c" />
     <ClCompile Include="..\..\..\src\cmscam02.c" />
     <ClCompile Include="..\..\..\src\cmscgats.c" />
     <ClCompile Include="..\..\..\src\cmscnvrt.c" />
